// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavItemForm component test with Enzyme render submit on Form component when editFavitem is true 1`] = `
<styled.div>
  <styled.div>
    Edit favorite item
  </styled.div>
  <styled.form
    onSubmit={[Function]}
  >
    <styled.input
      name="author"
      onChange={[Function]}
      placeholder="Author"
      type="text"
      value=""
    />
    <styled.input
      name="title"
      onChange={[Function]}
      placeholder="Title"
      required={true}
      type="text"
      value=""
    />
    <styled.select
      name="category"
      onChange={[Function]}
      value=""
    >
      <styled.option
        value="Other"
      >
        Select Category
      </styled.option>
      <styled.option
        value="Film"
      >
        Films
      </styled.option>
      <styled.option
        value="Music"
      >
        Music
      </styled.option>
      <styled.option
        value="Books"
      >
        Books
      </styled.option>
      <styled.option
        value="Other"
      >
        Other
      </styled.option>
    </styled.select>
    <styled.input
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <styled.button>
      Update
    </styled.button>
    <styled.button
      onClick={[Function]}
    >
      Cancel
    </styled.button>
  </styled.form>
</styled.div>
`;

exports[`FavItemForm component test with Enzyme renders correct snapshot 1`] = `
<styled.div>
  <styled.div>
    Edit favorite item
  </styled.div>
  <styled.form
    onSubmit={[Function]}
  >
    <styled.input
      name="author"
      onChange={[Function]}
      placeholder="Author"
      type="text"
      value=""
    />
    <styled.input
      name="title"
      onChange={[Function]}
      placeholder="Title"
      required={true}
      type="text"
      value=""
    />
    <styled.select
      name="category"
      onChange={[Function]}
      value=""
    >
      <styled.option
        value="Other"
      >
        Select Category
      </styled.option>
      <styled.option
        value="Film"
      >
        Films
      </styled.option>
      <styled.option
        value="Music"
      >
        Music
      </styled.option>
      <styled.option
        value="Books"
      >
        Books
      </styled.option>
      <styled.option
        value="Other"
      >
        Other
      </styled.option>
    </styled.select>
    <styled.input
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <styled.button>
      Update
    </styled.button>
  </styled.form>
  <styled.div>
    <styled.button
      onClick={[Function]}
      type="button"
    >
      a
    </styled.button>
  </styled.div>
</styled.div>
`;

exports[`render change on Input component 1`] = `
<styled.div>
  <styled.div>
    Edit favorite item
  </styled.div>
  <styled.form
    onSubmit={[Function]}
  >
    <styled.input
      name="author"
      onChange={[Function]}
      placeholder="Author"
      type="text"
      value=""
    />
    <styled.input
      name="title"
      onChange={[Function]}
      placeholder="Title"
      required={true}
      type="text"
      value=""
    />
    <styled.select
      name="category"
      onChange={[Function]}
      value=""
    >
      <styled.option
        value="Other"
      >
        Select Category
      </styled.option>
      <styled.option
        value="Film"
      >
        Films
      </styled.option>
      <styled.option
        value="Music"
      >
        Music
      </styled.option>
      <styled.option
        value="Books"
      >
        Books
      </styled.option>
      <styled.option
        value="Other"
      >
        Other
      </styled.option>
    </styled.select>
    <styled.input
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <styled.button>
      Update
    </styled.button>
  </styled.form>
  <styled.div>
    <styled.button
      onClick={[Function]}
      type="button"
    >
      a
    </styled.button>
  </styled.div>
</styled.div>
`;

exports[`render click on ErrorButton when error is array 1`] = `
<styled.div>
  <styled.div>
    Edit favorite item
  </styled.div>
  <styled.form
    onSubmit={[Function]}
  >
    <styled.input
      name="author"
      onChange={[Function]}
      placeholder="Author"
      type="text"
      value=""
    />
    <styled.input
      name="title"
      onChange={[Function]}
      placeholder="Title"
      required={true}
      type="text"
      value=""
    />
    <styled.select
      name="category"
      onChange={[Function]}
      value=""
    >
      <styled.option
        value="Other"
      >
        Select Category
      </styled.option>
      <styled.option
        value="Film"
      >
        Films
      </styled.option>
      <styled.option
        value="Music"
      >
        Music
      </styled.option>
      <styled.option
        value="Books"
      >
        Books
      </styled.option>
      <styled.option
        value="Other"
      >
        Other
      </styled.option>
    </styled.select>
    <styled.input
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <styled.button>
      Update
    </styled.button>
    <styled.button
      onClick={[Function]}
    >
      Cancel
    </styled.button>
  </styled.form>
  <styled.div>
    <styled.button
      onClick={[Function]}
      type="button"
    />
    <styled.button
      onClick={[Function]}
      type="button"
    />
  </styled.div>
</styled.div>
`;

exports[`render click on ErrorButton when error is not array 1`] = `
<styled.div>
  <styled.div>
    Edit favorite item
  </styled.div>
  <styled.form
    onSubmit={[Function]}
  >
    <styled.input
      name="author"
      onChange={[Function]}
      placeholder="Author"
      type="text"
      value=""
    />
    <styled.input
      name="title"
      onChange={[Function]}
      placeholder="Title"
      required={true}
      type="text"
      value=""
    />
    <styled.select
      name="category"
      onChange={[Function]}
      value=""
    >
      <styled.option
        value="Other"
      >
        Select Category
      </styled.option>
      <styled.option
        value="Film"
      >
        Films
      </styled.option>
      <styled.option
        value="Music"
      >
        Music
      </styled.option>
      <styled.option
        value="Books"
      >
        Books
      </styled.option>
      <styled.option
        value="Other"
      >
        Other
      </styled.option>
    </styled.select>
    <styled.input
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <styled.button>
      Update
    </styled.button>
  </styled.form>
  <styled.div>
    <styled.button
      onClick={[Function]}
      type="button"
    >
      a
    </styled.button>
  </styled.div>
</styled.div>
`;
